Improve - Format body with separator

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/** HEADER **/
+
 #header {
   display: flex;
   align-items: center;
@@ -15,11 +17,23 @@
 .small-separator {
   height: 2px;
   width: 7rem;
-  background-color: white;
+  background-color: var(--text-color);
   margin: 0.5rem;
 }
 
 #header > .nav > li {
   font-size: 1.5rem;
   font-weight: bold;
+}
+
+/** BODY **/
+
+#body {
+  height: 100%;
+}
+
+.body-separator {
+  height: 1.3rem;
+  width: 13rem;
+  background-color: var(--secondary-color);
 }
