New - Add intro content

--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,28 @@ html, body, #root, .App {
   display: flex;
   gap: 1rem;
 }
+
+button, a {
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  font: inherit;
+  color: inherit;
+  padding: 0;
+  transition: all 0.3s linear;
+}
+
+button:hover {
+  filter: brightness(80%);
+}
+
+button.link {
+  /* padding: 0; */
+  text-decoration: underline;
+  font-style: italic;
+}
+
+button.link:hover{
+  color: var(--hover-color);
+  filter: brightness(100%);
+}
