--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,38 @@
   width: 13rem;
   background-color: var(--secondary-color);
 }
+
+.body-content {
+  padding: 8%;
+  padding-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+/** Home **/
+
+#home {
+
+}
+
+#home > div:first-child {
+  font-size: 4.5rem;
+  font-weight: bold;
+}
+
+#home > div:nth-child(2) {
+  width: 30rem;
+  font-size: 1.2rem;
+}
+
+#home > ul {
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding-top: 1.5rem;
+}
+
+#home button:hover {
+  color: var(--secondary-color);
+  filter: brightness(100%);
+}
