New - Add context

--- a/src/index.css
+++ b/src/index.css
@@ -50,20 +50,15 @@ button, a {
   font: inherit;
   color: inherit;
   padding: 0;
-  transition: all 0.3s linear;
+  transition: all 0.2s linear;
 }
 
-button:hover {
-  filter: brightness(80%);
-}
-
-button.link {
+/* button.link { */
   /* padding: 0; */
-  text-decoration: underline;
-  font-style: italic;
-}
+  /* text-decoration: underline;
+  font-style: italic; */
+/* } */
 
 button.link:hover{
-  color: var(--hover-color);
-  filter: brightness(100%);
+  color: var(--secondary-color);
 }
