--- a/src/index.css
+++ b/src/index.css
@@ -23,16 +23,18 @@ code {
     monospace;
 }
 
-html, body, #root, .App {
+html, body, #root, .App, #body {
   height: 100%;
+  background: black;
+  color: white;
 }
 
 #root {
   --bg-color: black;
   --secondary-color: #ffda0a;
   --text-color: white;
-  background: black;
-  color: white;
+
+  --page-LR-margin: 8vw;
 }
 
 .horizontal-list {
