--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ code {
     monospace;
 }
 
-html, body, #root, .App, #body {
+html, body, #root, .App {
   height: 100%;
   background: black;
   color: white;
@@ -53,6 +53,7 @@ button, a {
   color: inherit;
   padding: 0;
   transition: all 0.2s linear;
+  text-decoration: none;
 }
 
 /* button.link { */
@@ -61,6 +62,6 @@ button, a {
   font-style: italic; */
 /* } */
 
-button.link:hover{
+button.link:hover, a.link:hover{
   color: var(--secondary-color);
 }
