--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
 /** BODY **/
 
 #body {
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
 }
 
@@ -61,9 +61,39 @@
   font-size: 1.2rem;
 }
 
+.fade-enter {
+  opacity: 0;
+  z-index: 1;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 300ms ease-in;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-exit.fade-exit-active {
+  opacity: 0;
+  transition: opacity 300ms ease-in;
+}
+
+div.transition-group {
+  position: relative;
+}
+
+section.route-section {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
 /** Home **/
 
-#home {
+#home > .page-content {
   max-width: min(30rem, calc(100vw - (var(--page-LR-margin) * 2)));
 }
 
