--- a/src/App.css
+++ b/src/App.css
@@ -48,13 +48,8 @@
   margin-top: 1.5rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.5rem;
   height: 100%;
-}
-
-.page-title {
-  font-size: 4.5rem;
-  font-weight: bold;
 }
 
 .page-content {
@@ -78,6 +73,38 @@
 .fade-exit.fade-exit-active {
   opacity: 0;
   transition: opacity 300ms ease-in;
+}
+
+.fade-enter h1 {
+  animation: slide-left-to-right ease-in-out 1000ms;
+}
+
+@keyframes slide-left-to-right {
+  0% {
+    transform: translateX(-5rem);
+    opacity: 0;
+  } 75% {
+    opacity: 0.5;
+  } 100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.fade-enter > .body-content > *:not(h1) {
+  animation: slide-bottom-to-top ease-in-out 1100ms;
+}
+
+@keyframes slide-bottom-to-top {
+  0% {
+    transform: translateY(5rem);
+    opacity: 0;
+  } 75% {
+    opacity: 0.5;
+  } 100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
 div.transition-group {
