--- a/src/App.css
+++ b/src/App.css
@@ -115,7 +115,6 @@ section.route-section {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
 }
 
 /** Home **/
@@ -169,4 +168,25 @@ section.route-section {
 
 .tech-stack li:hover {
   --scale: 1;
+}
+
+/** CONTACT **/
+
+#contact ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+#contact li img {
+  height: 2rem;
+}
+
+#contact a {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
