--- a/src/App.css
+++ b/src/App.css
@@ -189,6 +189,7 @@ section.route-section {
   display: flex;
   align-items: center;
   gap: 1rem;
+  font-weight: normal;
 }
 
 /** PROJECTS **/
@@ -219,13 +220,50 @@ section.route-section {
   justify-content: center;
   align-items: center;
   height: 15rem;
+  text-align: center;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  transition: all 0.3s ease-in-out;
 }
 
 #projects .thumbnail-description {
   background-color: var(--text-color);
   color: var(--bg-color);
   height: 10rem;
-  padding: 1rem;
-  border-bottom-left-radius: 7px; 
-  border-bottom-right-radius: 7px; 
+  padding: 2rem;
+  border: none;
+  border-bottom-left-radius: 5px; 
+  border-bottom-right-radius: 5px; 
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
+
+#projects .thumbnail-description > div:first-child {
+  height: 4.5rem;
+  overflow: hidden;
+  border: none;
+}
+
+#projects .thumbnail-description > a:hover {
+  color: inherit;
+}
+
+/* #projects .thumbnail-description > a:hover::after {
+  content: "";
+  animation: running-arrows 2s ease-in-out infinite;
+} */
+
+/* @keyframes running-arrows {
+  0% {
+    content: '';
+  } 25% {
+    content: '>';
+  } 50% {
+    content: '>>';
+  } 75% {
+    content: '>';
+  } 100% {
+    content: '';
+  }
+} */
