New - Passing all data to project detail on refresh

--- a/src/index.css
+++ b/src/index.css
@@ -84,10 +84,12 @@ h1 {
   font-size: 4.5rem;
   font-weight: bold;
   margin: 0;
+  margin-bottom: 1rem;
 }
 
 h2 {
   font-size: 1.5rem;
   font-weight: bold;
   margin: 0;
+  margin-bottom: 1rem;
 }
