--- a/src/App.css
+++ b/src/App.css
@@ -44,12 +44,14 @@
 }
 
 .body-content {
-  margin: 1.5rem var(--page-LR-margin);
-  margin-bottom: 0;
+  /* margin: 1.5rem var(--page-LR-margin); */
+  padding: 1.5rem var(--page-LR-margin);
+  /* margin-bottom: 0; */
   display: flex;
   flex-direction: column;
   gap: 1rem;
   height: 100%;
+  width: 100%;
 }
 
 .page-content {
@@ -83,7 +85,7 @@
   0% {
     transform: translateX(-5rem);
     opacity: 0;
-  } 75% {
+  } 70% {
     opacity: 0.5;
   } 100% {
     transform: translateX(0);
@@ -115,6 +117,7 @@ section.route-section {
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
 }
 
 /** Home **/
@@ -168,6 +171,22 @@ section.route-section {
 
 .tech-stack li:hover {
   --scale: 1;
+}
+
+.fade-enter .tech-stack {
+  animation: pop-up-left-to-right ease-in-out 1000ms;
+}
+
+@keyframes pop-up-left-to-right {
+  0% {
+    transform: translateY(-5rem);
+    opacity: 0;
+  } 70% {
+    opacity: 0.5;
+  } 100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 /** CONTACT **/
@@ -271,4 +290,16 @@ section.route-section {
   .demo > ul {  
     grid-template-columns: repeat(1, 1fr);
   }
+}
+
+.project-detail > .page-content {
+  max-width: min(40rem, calc(100vw - (var(--page-LR-margin) * 2)));
+}
+
+.project-detail-snippet {
+  font-style: italic; 
+}
+
+.project-detail ol {
+  padding: 0.75rem;
 }
