--- a/src/index.css
+++ b/src/index.css
@@ -65,9 +65,12 @@ button.link:hover, a.link:hover{
 }
 
 button.std-btn, a.std-btn {
+  display: inline-block;
   background-color: var(--secondary-color);
   color: var(--bg-color);
-  max-width: fit-content;
+  width: 10rem;
+  min-width: fit-content;
+  text-align: center;
   padding: 1rem;
   border-radius: 10px;
   font-weight: bold;
@@ -92,4 +95,9 @@ h2 {
   font-weight: bold;
   margin: 0;
   margin-bottom: 1rem;
+}
+
+.hflex {
+  display: flex;
+  gap: 1rem;
 }
