--- a/src/App.css
+++ b/src/App.css
@@ -58,12 +58,12 @@
   font-size: 1.2rem;
 }
 
-.fade-enter {
+.fade-appear, .fade-enter {
   opacity: 0;
   z-index: 1;
 }
 
-.fade-enter.fade-enter-active {
+.fade-appear.fade-appear-active, .fade-enter.fade-enter-active {
   opacity: 1;
   transition: opacity 300ms ease-in;
 }
@@ -77,7 +77,7 @@
   transition: opacity 300ms ease-in;
 }
 
-.fade-enter h1 {
+.fade-appear h1, .fade-enter h1 {
   animation: slide-left-to-right ease-in-out 1000ms;
 }
 
@@ -93,6 +93,7 @@
   }
 }
 
+.fade-appear > .body-content > *:not(h1),
 .fade-enter > .body-content > *:not(h1) {
   animation: slide-bottom-to-top ease-in-out 1100ms;
 }
@@ -171,22 +172,6 @@ section.route-section {
 
 .tech-stack li:hover {
   --scale: 1;
-}
-
-.fade-enter .tech-stack {
-  animation: pop-up-left-to-right ease-in-out 1000ms;
-}
-
-@keyframes pop-up-left-to-right {
-  0% {
-    transform: translateY(-5rem);
-    opacity: 0;
-  } 70% {
-    opacity: 0.5;
-  } 100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
 }
 
 /** CONTACT **/
