--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,14 @@ code {
 html, body, #root, .App {
   height: 100%;
   background: black;
-  color: white;
+  color: #ffffff;
+  
+}
+
+@media screen and (max-width: 500px) {
+  html {
+    font-size: 10px;
+  }
 }
 
 #root {
@@ -93,8 +100,7 @@ h1 {
 h2 {
   font-size: 1.5rem;
   font-weight: bold;
-  margin: 0;
-  margin-bottom: 1rem;
+  margin: 1rem 0;
 }
 
 .hflex {
